fixed some spacing in mobile view

--- a/css/kube.css
+++ b/css/kube.css
@@ -3833,7 +3833,7 @@ section {
 }
 section a {
   text-decoration: none;
-  color: #0000FF;
+  color: #886e9a;
   font-weight: bold;
   cursor: pointer;
 }
@@ -4077,16 +4077,16 @@ section a {
   }
   .cbp-spmenu {
     padding-top: 0;
-    height: 5em;
+    height: 6em;
     display: inline-block;
   }
   .cbp-spmenu #nav-left {
-    font-size: 80%;
-    margin-top: -2em;
+    font-size: 90%;
+    margin-top: 0em;
   }
   .cbp-spmenu #nav-right {
     font-size: 90%;
-    margin-top: -4em;
+    margin-top: -4.4em;
     margin-left: 0;
     display: inline-block;
   }
@@ -4319,22 +4319,6 @@ data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAFCAYAAACNbyblAAAAJUlEQVQIW2
   text-align: left;
   font-weight: 400;
 }
-.section-work p.typenexa {
-  font-family: 'nexa_boldregular', sans-serif;
-  line-height: 1.5em;
-  font-size: 1em;
-}
-.section-work p.typelora {
-  font-family: 'lora', serif;
-  font-style: italic;
-  line-height: 1.5em;
-  font-size: 1em;
-}
-.section-work p.typeopensans {
-  font-family: 'Open Sans', sans-serif;
-  line-height: 1.5em;
-  font-size: 1em;
-}
 .section-work #section-caption {
   color: #bdc3c7;
   font-family: "Vollkorn", serif;
@@ -4422,7 +4406,7 @@ data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAFCAYAAACNbyblAAAAJUlEQVQIW2
     font-size: 5em;
   }
   section {
-    top: 27em;
+    top: 30em;
   }
   #splash {
     top: 10em;
@@ -4467,17 +4451,17 @@ data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAFCAYAAACNbyblAAAAJUlEQVQIW2
     font-size: 3.5em;
   }
   section {
-    top: 20em;
+    top: 23em;
   }
   #splash {
     top: 5.5em;
   }
   #splash h1 {
-    font-size: 2.5em;
+    font-size: 2.3em;
   }
   #splash h1.subheading {
     /*				margin-top: -2.3em;*/
-    font-size: 1.2em;
+    font-size: 1.1em;
   }
   .block-full {
     height: 13em;
@@ -4502,12 +4486,26 @@ data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAFCAYAAACNbyblAAAAJUlEQVQIW2
     padding-bottom: 0em;
   }
   .section-work {
-    padding-top: 1em;
+    padding-top: 0em;
   }
   .section-work h2 {
     font-size: 1.3em;
+    padding-top: 0em;
   }
   .section-work p {
     text-align: left;
+    font-size: 1em;
+    padding-bottom: 0em;
+  }
+  .section-work h1 {
+    font-size: 1.5em;
+    padding-top: 1.5em;
+  }
+  .image-section {
+    padding-top: 0.2em;
+    padding-bottom: 0.2em;
+  }
+  #section-caption figure {
+    padding-top: 0em;
   }
 }
