--- a/less/style.less
+++ b/less/style.less
@@ -67,7 +67,7 @@ section {
 
 	a {
 		text-decoration: none;
-		color: #0000FF;
+		color: #886e9a;
 		font-weight: bold;
 		cursor: pointer;
 	}
@@ -368,17 +368,17 @@ section {
 
 		.cbp-spmenu {
 			padding-top: 0;
-			height: 5em;
+			height: 6em;
 			display: inline-block;
 
 			#nav-left {
-				font-size: 80%;
-				margin-top: -2em;
+				font-size: 90%;
+				margin-top: 0em;
 			}
 
 			#nav-right {
 				font-size: 90%;
-				margin-top: -4em;
+				margin-top: -4.4em;
 				margin-left: 0;
 				display: inline-block;
 
@@ -676,27 +676,6 @@ data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAFCAYAAACNbyblAAAAJUlEQVQIW2
 		}
 
 
-			p.typenexa {
-			font-family: 'nexa_boldregular', sans-serif;
-			line-height: 1.5em;
-			font-size: 1em;
-		}
-
-
-			p.typelora {
-			font-family: 'lora', serif;
-			font-style: italic;
-			line-height: 1.5em;
-			font-size: 1em;
-		}
-
-			p.typeopensans {
-			font-family: 'Open Sans', sans-serif;
-			line-height: 1.5em;
-			font-size: 1em;
-		}
-
-
 
 
 
@@ -813,7 +792,7 @@ data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAFCAYAAACNbyblAAAAJUlEQVQIW2
 		}
 
 		section {
-			top: 27em;
+			top: 30em;
 		}
 
 		#splash {
@@ -884,17 +863,18 @@ data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAFCAYAAACNbyblAAAAJUlEQVQIW2
 		}
 
 		section {
-			top: 20em;
+			top: 23em;
 		}
+
 		#splash {
 			top: 5.5em;
 			h1 {
-				font-size: 2.5em;
+				font-size: 2.3em;
 			}
 
 			h1.subheading {
 /*				margin-top: -2.3em;*/
-				font-size: 1.2em;
+				font-size: 1.1em;
 
 			}
 		}
@@ -932,18 +912,34 @@ data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAFCAYAAACNbyblAAAAJUlEQVQIW2
 		}
 
 		.section-work {
-			padding-top: 1em;
+			padding-top: 0em;
 
 		}
 
 		.section-work h2 {
 			font-size: 1.3em;
+			padding-top: 0em;
 		}
 
 		.section-work p {
 			text-align: left;
+			font-size: 1em;
+			padding-bottom: 0em;
 		}
 
+		.section-work h1 {
+			font-size: 1.5em;
+			padding-top: 1.5em;
+		}
+
+		.image-section {
+			padding-top: 0.2em;
+			padding-bottom: 0.2em;
+		}
+
+		#section-caption figure {
+			padding-top: 0em;
+		}
 
 
 	}
